# engram-os

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  desktop.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CODEBASE_HEALTH_SCAN_REPORT.md  END_TO_END_TEST_REPORT.md  HOW_ENGRAM_WORKS.md
doxs/: USER_GUIDE.md  desktop.ini
engram/: __init__.py  __main__.py  cli.py
engram-test-api/: README.md  database.py  main.py  models.py
engram/benchmarks/: __init__.py  baseline.py  dashboard.py  interactive_cli.py  metrics.py  run_benchmarks.py  test_cases.py
engram/cli/: __init__.py  _config.py  _display.py  benchmark_command.py  code_command.py  config_command.py  doctor_command.py  experience_command.py  export_command.py  init_command.py  learn_command.py  main.py  module_command.py  rubric_command.py  run_command.py  score_command.py  session_command.py  status_command.py
engram/commands/: __init__.py  ingest.py  new.py  run.py
engram/config/: mcp_servers.yaml
engram/core/: __init__.py  agent.py  agent_session.py  assembler.py  boot.py  contract.py  embedder.py  experience.py  horizon.py  ingestion.py  learner.py  learning_history.py  llm.py  llm_mock.py  mcp_client.py  pipeline.py  planner.py  probe.py  router.py  scorer.py  scorer_calibration.py  scratch.py  session.py  shared_scratch.py  stones.py  test_mcp_tools.py  utils.py  vector_db.py  writeback.py
engram/modules/: __init__.py  module_loader.py  module_registry.yaml
engram/orchestration/: __init__.py  (+3 more)
examples/: ollama_chat.py
tests/: test_processor.py
(+53 files in other folders)
